fixed header closing on mobile

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -139,6 +139,11 @@ nav {
     }
   }
 
+  nav {
+    height: 10vh;
+    padding-left: 0rem;
+  }
+
   .hamburger-button {
     display: block;
   }
